force-app/main/default/objects/Account/fields/Account_Process_Ran__c.field-meta.xml
<CustomField>
    <fullName>Account_Process_Ran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account_Process_Ran</label>
    <type>Checkbox</type>
</CustomField>