force-app/main/default/objects/Account/fields/D_B_DU_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>D_B_DU_Business_Name__c</fullName>
    <label>D_B_DU_Business_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>