force-app/main/default/objects/Account/fields/D_B_GU_DUNS__c.field-meta.xml
<CustomField>
    <fullName>D_B_GU_DUNS__c</fullName>
    <label>D_B_GU_DUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>