force-app/main/default/objects/Account/fields/D_B_Update_Completed__c.field-meta.xml
<CustomField>
    <fullName>D_B_Update_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D_B_Update_Completed</label>
    <type>Checkbox</type>
</CustomField>