force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <description>This field is used to calculate the data quality of this record.  It looks at the Name, Billing Address, Shipping Address, Phone Number, Website, Industry and the DUNS number is populated.  Help improve the quality score by filling or fixing missing data.</description>
    <formula>IF(LEN( Name ) = 0, 0,15) 
+ IF(LEN( BillingStreet ) = 0, 0,15) 
+ IF(LEN( BillingPostalCode ) = 0, 0,5)
+ IF(LEN( BillingCountry ) = 0, 0,5)
+ IF(LEN( ShippingStreet ) = 0, 0,15)
+ IF(LEN( ShippingPostalCode ) = 0, 0,5) 
+ IF(LEN( ShippingCountry ) = 0, 0,5)
+ IF(LEN( Phone ) = 0, 0,10)
+ IF(LEN( Website  ) = 0, 0,10)
+ IF(LEN( DNB_D_U_N_S_Number__c ) = 0, 0,10)
+ IF(ISPICKVAL( Industry,&quot;&quot;), 0,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to calculate the data quality of this record.  It looks at the Name, Billing Address, Shipping Address, Phone Number, Website, Industry and the DUNS number is populated.  Help improve the quality score by filling or fixing missing data.</inlineHelpText>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>