force-app/main/default/objects/Account/fields/DNB_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>DNB_D_U_N_S_Number__c</fullName>
    <label>DNB_D_U_N_S_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>