force-app/main/default/objects/Account/fields/Exclude_from_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude_from_Automation</label>
    <type>Checkbox</type>
</CustomField>