force-app/main/default/objects/Account/validationRules/Mailing_Address_Fields_Are_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Address_Fields_Are_Required</fullName>
    <active>false</active>
    <description>Validates that the contact Shipping Street, Shipping Postal Code/Zip, and Shipping Country are provided.</description>
    <errorConditionFormula>OR(
   ISBLANK( ShippingStreet ),
   ISBLANK( ShippingPostalCode ),
   ISBLANK( ShippingCountry )
)</errorConditionFormula>
    <errorMessage>Please fill out the Mailing Address Fields. Street, Postal Code/Zip, and Country are required.</errorMessage>
</ValidationRule>